<resources>
    <string name="app_name">Soil Monitor</string>
    <string name="soil_monitor">Soil Monitor</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save_to_db">Save to DB</string>
    <string name="image_preview">Image Preview</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome!</string>
    <string name="image">Image</string>
    <string name="save_config">Save Config</string>
    <string name="settings">Settings</string>
    <string name="take_reading">Take Reading</string>
    <string name="uploading_please_wait">Uploading, please wait...</string>
    <string name="home">Home</string>
    <string name="view_uploaded_images">View Uploaded Images</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="expand_collapse_folder">Expand/Collapse Folder</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="select_profile_image">Select Profile Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="theme_modes">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>


</resources>